Change border color of pv maps and sort

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -3,7 +3,8 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto thick_border
+#styles = maps inferno aspect_auto thick_border
+styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -148,7 +149,6 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 model_vsys = -2.295489254670895
 model_offset0 = 0.08200997056659148
 model_info = 1
-
 
 [G10_alma1c_pvmap_rot]
 loc = 1 0
@@ -455,19 +455,19 @@ model_sd_mass = 3.0050221537082416 solMass
 model_vsys = 35.0718928208667
 model_offset0 = 0.009770749516444886
 
-[G11.92-0.61_alma3_infall_mirror]
+[G11.92-0.61_alma1a_infall_mirror]
 loc = 3 1
 function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 11.001263295019477 solMass
-model_amplitude = 9.87903195940451
+model_mass = 44.46751328093813 solMass
+model_amplitude = 19.86161378765654
 model_x_0 = 0.05934718100890208
 model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 35.98235303900969
-model_offset0 = -0.006730312863536275
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
 model_info = 1
 
