--- a/configs/plots/papers/group_pv_maps.10.cfg
+++ b/configs/plots/papers/group_pv_maps.10.cfg
@@ -41,349 +41,108 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[NGC6334IN_alma4_pvmap_rot]
+[G343_alma1_pvmap_rot]
 loc = 0 0
-source = NGC_6334_I_N
-alma = 4
-paval = 130
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
-hlines = -6.7 km/s
-rms = 1.7 mJy/beam
-vmax = 20 mJy/beam
-
-[NGC_6334_I_N_alma4_pvedge]
-loc = 0 0
-structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma4_pvmaps/NGC_6334_I_N_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA130.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[NGC_6334_I_N_alma4_keplerian_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 5.008559892995641 solMass
-model_sd_mass = 0.406582460919903 solMass
-model_amplitude = -6.665758063838215
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_sd_amplitude = 0.2705548476401526
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC_6334_I_N_alma4_unrestricted_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -7.542074600407852
-model_x_0 = 0.07407407407407407
-model_alpha = 0.689992836962557
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_sd_amplitude = 0.509191397488919
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.08138008183005685
-model_sd_vsys = 0.24941754130606864
-model_sd_offset0 = 0.009763104615705958
-model_info = 1
-
-[NGC6334IN_alma4_pvmap_out]
-loc = 0 1
-source = NGC_6334_I_N
-alma = 4
-paval = 220
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
-hlines = -6.7 km/s
-rms = 1.7 mJy/beam
-vmax = 20 mJy/beam
-
-[NGC6334IN_alma6_pvmap_rot]
-loc = 1 0
-source = NGC_6334_I_N
-alma = 6
-paval = 130
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
-hlines = -7.2 km/s
-rms = 1.7 mJy/beam
-vmax = 38 mJy/beam
-
-[NGC_6334_I_N_alma6_pvedge]
-loc = 1 0
-structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma6_pvmaps/NGC_6334_I_N_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA130.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[NGC_6334_I_N_alma6_keplerian_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 9.996699492902263 solMass
-model_amplitude = -9.417192098531983
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 0.4819804276510245 solMass
-model_vsys = -3.714491730229512
-model_offset0 = -0.033134059487579144
-model_sd_amplitude = 0.22702004187206742
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[NGC_6334_I_N_alma6_unrestricted_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -9.089962731920929
-model_x_0 = 0.07407407407407407
-model_alpha = 0.4422619666619437
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -3.714491730229512
-model_offset0 = -0.033134059487579144
-model_sd_amplitude = 0.3875457154252825
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.049526073226520986
-model_sd_vsys = 0.23818582528693916
-model_sd_offset0 = 0.009085026897949643
-model_info = 1
-
-[NGC6334IN_alma6_pvmap_out]
-loc = 1 1
-source = NGC_6334_I_N
-alma = 6
-paval = 220
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
-hlines = -7.2 km/s
-rms = 1.7 mJy/beam
-vmax = 38 mJy/beam
-
-[NGC6334IN_alma11_pvmap_rot]
-loc = 2 0
-source = NGC_6334_I_N
-alma = 11
-paval = 160
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
-ylim = -15 5 km/s
-hlines = -5.0 km/s
-rms = 1.7 mJy/beam
-vmax = 20 mJy/beam
-markers = -0.087 arcsec -10.1 km/s
+source = G343.12-0.06
+alma = 1
+paval = 230
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
+hlines = -33.71 km/s
+rms = 1.1 mJy/beam
+vmax = 40 mJy/beam
+markers = 0.23 arcsec -31.3 km/s, -0.16 arcsec -40.1 km/s
 markers_physframe = data
-markers_marker = ^
+markers_marker = v, ^
 markers_mec = #46eff2
 markers_mfc = #46eff2
 markers_ms = 10
 
-[NGC6334IN_alma11_pvmap_out]
+[G343_alma1_pvmap_out]
+loc = 0 1
+source = G343.12-0.06
+alma = 1
+paval = 320
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
+hlines = -33.71 km/s
+rms = 1.1 mJy/beam
+vmax = 40 mJy/beam
+
+[G35.13_alma6_pvmap_rot]
+loc = 1 0
+source = G35.13-0.74
+alma = 6
+paval = 95
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = 35.53 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
+markers = 0.15 arcsec 39.5 km/s, -0.005 arcsec 30.2 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[G35.13_alma6_pvmap_out]
+loc = 1 1
+source = G35.13-0.74
+alma = 6
+paval = 185
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra284.52617_dec1.61867.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = 35.53 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
+
+[G35.20_alma2_pvmap_rot]
+loc = 2 0
+source = G35.20-0.74_N
+alma = 2
+paval = -23
+label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
+xlim = -0.48 0.48 arcsec
+ylim = 20 40 km/s
+hlines = 30.0 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
+markers = -0.32 arcsec 26.0 km/s, 0.030 arcsec 32.9 km/s
+markers_physframe = data
+markers_marker = ^, v
+markers_mec = #46eff2
+markers_ms = 10
+
+[G35.20_alma2_pvmap_out]
 loc = 2 1
-source = NGC_6334_I_N
-alma = 11
-paval = 250
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
-ylim = -15 5 km/s
-hlines = -5.0 km/s
-rms = 1.7 mJy/beam
-vmax = 20 mJy/beam
+source = G35.20-0.74_N
+alma = 2
+paval = 67
+label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
+xlim = -0.48 0.48 arcsec
+ylim = 20 40 km/s
+hlines = 30.0 km/s
+rms = 2.5 mJy/beam
+vmax = 60 mJy/beam
 
-[W33A_alma1a_pvmap_rot]
+[G351_alma2_pvmap_rot]
 loc = 3 0
-source = W33A
-alma = 1a
-paval = -30
-pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
-hlines = 37.9 km/s
-rms = 1.3 mJy/beam
-vmax = 40 mJy/beam
+source = G351.77-0.54
+alma = 2
+paval = 130
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
+hlines = -3.83 km/s
+rms = 2.0 mJy/beam
+vmax = 45 mJy/beam
 
-[W33A_alma1a_pvedge]
-loc = 3 0
-structured_array = ../results/W33A/c5c8/per_hot_core/alma1a_pvmaps/W33A_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA-30.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[W33A_alma1a_keplerian_fit]
-loc = 3 0
-function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 17.755709293503035 solMass
-model_amplitude = -12.550531669822306
-model_x_0 = 0.039525691699604744
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 1.4466281877043492 solMass
-model_vsys = 37.28539294186246
-model_offset0 = 0.01622876626201136
-model_sd_amplitude = 0.5112708420745686
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[W33A_alma1a_unrestricted_fit]
-loc = 3 0
-function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -12.987044013188374
-model_x_0 = 0.039525691699604744
-model_alpha = 0.5281034315022166
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 37.28539294186246
-model_offset0 = 0.01622876626201136
-model_sd_amplitude = 1.0756250852140001
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.06118088081552969
-model_sd_vsys = 0.343779033979197
-model_sd_offset0 = 0.00889964380084104
-model_info = 1
-
-[W33A_alma1a_pvmap_out]
+[G351_alma2_pvmap_out]
 loc = 3 1
-source = W33A
-alma = 1a
-paval = 60
-pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
-hlines = 37.9 km/s
-rms = 1.3 mJy/beam
-vmax = 40 mJy/beam
-
-[NGC_6334_I_N_alma4_infall]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 5.008559892995641 solMass
-model_amplitude = -6.665758063838215
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC_6334_I_N_alma6_infall]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 9.996699492902263 solMass
-model_amplitude = -9.417192098531983
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -3.714491730229512
-model_offset0 = -0.033134059487579144
-model_info = 1
-
-[W33A_alma1a_infall]
-loc = 3 1
-function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 17.755709293503035 solMass
-model_amplitude = -12.550531669822306
-model_x_0 = 0.07905138339920949
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 37.28539294186246
-model_offset0 = 0.01622876626201136
-model_info = 1
-
-[NGC_6334_I_N_alma4_infall_mirror]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 5.008559892995641 solMass
-model_amplitude = 6.665758063838215
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -5.1109728228308375
-model_offset0 = 0.0026538640954391506
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC_6334_I_N_alma6_infall_mirror]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.49500000000000005 0.49500000000000005 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 9.996699492902263 solMass
-model_amplitude = 9.417192098531983
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -3.714491730229512
-model_offset0 = -0.033134059487579144
-model_info = 1
-
-[W33A_alma1a_infall_mirror]
-loc = 3 1
-function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 17.755709293503035 solMass
-model_amplitude = 12.550531669822306
-model_x_0 = 0.07905138339920949
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 37.28539294186246
-model_offset0 = 0.01622876626201136
-model_info = 1
+source = G351.77-0.54
+alma = 2
+paval = 220
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
+hlines = -3.83 km/s
+rms = 2.0 mJy/beam
+vmax = 45 mJy/beam
 
