--- a/configs/plots/papers/group_pv_maps.12.cfg
+++ b/configs/plots/papers/group_pv_maps.12.cfg
@@ -42,120 +42,38 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G5.89-0.37_alma14_pvmap_rot]
+[I18182_alma5_pvmap_rot]
 loc = 0 0
-source = G5.89-0.37
-alma = 14
-paval = -30
-pvmap = ${results}/${source}_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.PA${paval}.fits
-hlines = 7.92 km/s
-rms = 1.8 mJy/beam
-vmax = 35 mJy/beam
+source = IRAS_18182-1433
+alma = 5
+paval = 40
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
+xlim = -0.1 0.12 arcsec
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 15 mJy/beam
+markers = 0.036 arcsec 65.0 km/s, 0.0 arcsec 59.1 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[G5.89-0.37_alma14_pvmap_out]
+[I18182_alma5_pvmap_out]
 loc = 0 1
-source = G5.89-0.37
-alma = 14
-paval = 60
-pvmap = ${results}/${source}_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.PA${paval}.fits
-hlines = 7.92 km/s
-rms = 1.8 mJy/beam
-vmax = 35 mJy/beam
-
-[G5.89-0.37_alma14_pvedge]
-loc = 0 0
-structured_array = ../results/G5.89-0.37/c5c8/per_hot_core/alma14_pvmaps/G5.89-0.37_alma14_rotation.CH3CN_K3.ra270.12763_dec-24.06750.PA-30.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G5.89-0.37_alma14_keplerian_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 8.317855848978745 solMass
-model_sd_mass = 1.4872698183063287 solMass
-model_amplitude = -8.590111594474294
-model_x_0 = 0.033444816053511704
-model_alpha = 0.5
-model_vsys = 8.160722645931346
-model_offset0 = 0.021991679351316226
-model_sd_amplitude = 0.7679751814834268
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[G5.89-0.37_alma14_unrestricted_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -7.718310406342702
-model_x_0 = 0.033444816053511704
-model_alpha = 0.4309745099856601
-model_vsys = 8.160722645931346
-model_offset0 = 0.021991679351316226
-model_sd_amplitude = 1.851092420838303
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.13106141902734064
-model_sd_vsys = 0.4211616087915887
-model_sd_offset0 = 0.024317399866721188
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma1_pvmap_rot]
-loc = 1 0
-source = NGC6334I
-alma = 1
-paval = 60
-pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
-hlines = -8.0 km/s
-rms = 1.5 mJy/beam
-vmax = 45 mJy/beam
-
-[NGC6334I_alma1_pvmap_out]
-loc = 1 1
-source = NGC6334I
-alma = 1
-paval = 150
-pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
-hlines = -8.0 km/s
-rms = 1.5 mJy/beam
-vmax = 45 mJy/beam
-
-[NGC6334I_alma4_pvmap_rot]
-loc = 2 0
-source = NGC6334I
-alma = 4
-paval = 20
-pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
-hlines = -6.92 km/s
-rms = 1.5 mJy/beam
-vmax = 50 mJy/beam
-
-[NGC6334I_alma4_pvmap_out]
-loc = 2 1
-source = NGC6334I
-alma = 4
-paval = 110
-pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
-hlines = -6.92 km/s
-rms = 1.5 mJy/beam
-vmax = 50 mJy/beam
+source = IRAS_18182-1433
+alma = 5
+paval = 130
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
+xlim = -0.13 0.13 arcsec
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 15 mJy/beam
 
 [NGC6334I_alma8_pvmap_rot]
-loc = 3 0
+loc = 1 0
 source = NGC6334I
 alma = 8
 paval = 50
@@ -173,7 +91,7 @@ markers_mfc = #46eff2
 markers_ms = 10
 
 [NGC6334I_alma8_pvmap_out]
-loc = 3 1
+loc = 1 1
 source = NGC6334I
 alma = 8
 paval = 140
@@ -184,203 +102,89 @@ hlines = -4.7 km/s
 rms = 1.5 mJy/beam
 vmax = 15 mJy/beam
 
-[NGC6334I_alma1_pvedge]
-loc = 1 0
-structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma1_pvmaps/NGC6334I_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA60.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[NGC6334I_alma1_keplerian_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 8.67984271557738 solMass
-model_sd_mass = 0.8894660145924915 solMass
-model_amplitude = -8.775038665180102
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-model_vsys = -6.47272783024237
-model_offset0 = -0.003809389795954373
-model_sd_amplitude = 0.44961060500585176
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma1_unrestricted_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -9.661298770429125
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5745542962356066
-model_vsys = -6.47272783024237
-model_offset0 = -0.003809389795954373
-model_sd_amplitude = 1.4539993643115503
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.09894119576073762
-model_sd_vsys = 0.3104210015818551
-model_sd_offset0 = 0.02896689871324351
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma4_pvedge]
+[NGC6334IN_alma2_pvmap_rot]
 loc = 2 0
-structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma4_pvmaps/NGC6334I_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA20.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
+source = NGC_6334_I_N
+alma = 2
+paval = -55
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -3.9 km/s
+rms = 1.5 mJy/beam
+vmax = 16 mJy/beam
+markers = -0.15 arcsec -8.65 km/s, 0.11 arcsec -0.514 km/s
+markers_physframe = data
+markers_marker = ^, v
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[NGC6334I_alma4_keplerian_fit]
-loc = 2 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.321287015550672 solMass
-model_sd_mass = 1.2651733039128334 solMass
-model_amplitude = -8.059105246022634
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-model_vsys = -8.131157691426676
-model_offset0 = 0.012543710016940258
-model_sd_amplitude = 0.696336913785424
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma4_unrestricted_fit]
-loc = 2 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -23.753747130049224
-model_x_0 = 0.07407407407407407
-model_alpha = 1.3305393175883473
-model_vsys = -8.131157691426676
-model_offset0 = 0.012543710016940258
-model_sd_amplitude = 5.588260484571349
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.15263612206132474
-model_sd_vsys = 0.2024794157364633
-model_sd_offset0 = 0.01705269945191324
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[G5.89-0.37_alma14_infall]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 8.317855848978745 solMass
-model_amplitude = -8.590111594474294
-model_x_0 = 0.06688963210702341
-model_alpha = 0.5
-model_vsys = 8.160722645931346
-model_offset0 = 0.021991679351316226
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma1_infall]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 8.67984271557738 solMass
-model_amplitude = -8.775038665180102
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -6.47272783024237
-model_offset0 = -0.003809389795954373
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma4_infall]
+[NGC6334IN_alma2_pvmap_out]
 loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.321287015550672 solMass
-model_amplitude = -8.059105246022634
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -8.131157691426676
-model_offset0 = 0.012543710016940258
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+source = NGC_6334_I_N
+alma = 2
+paval = 35
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+ylim = -15 10 km/s
+hlines = -3.9 km/s
+rms = 1.5 mJy/beam
+vmax = 16 mJy/beam
 
-[G5.89-0.37_alma14_infall_mirror]
+[NGC6334IN_alma11_pvmap_rot]
+loc = 3 0
+source = NGC_6334_I_N
+alma = 11
+paval = 160
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
+ylim = -15 5 km/s
+hlines = -5.0 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+markers = -0.087 arcsec -10.1 km/s
+markers_physframe = data
+markers_marker = ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[NGC6334IN_alma11_pvmap_out]
+loc = 3 1
+source = NGC_6334_I_N
+alma = 11
+paval = 250
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma11_rotation.CH3CN_K3.ra260.22849_dec-35.75168.PA${paval}.fits
+ylim = -15 5 km/s
+hlines = -5.0 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+
+[W33A_alma1b_pvmap_rot]
+loc = 0 0
+source = W33A
+alma = 1b
+paval = 90
+pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
+hlines = 38.2 km/s
+rms = 1.3 mJy/beam
+vmax = 33 mJy/beam
+markers = -0.17 arcsec 31.9 km/s
+markers_physframe = data
+markers_marker = ^
+markers_mec = #46eff2
+markers_ms = 10
+
+[W33A_alma1b_pvmap_out]
 loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 8.317855848978745 solMass
-model_amplitude = 8.590111594474294
-model_x_0 = 0.06688963210702341
-model_alpha = 0.5
-model_vsys = 8.160722645931346
-model_offset0 = 0.021991679351316226
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma1_infall_mirror]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 8.67984271557738 solMass
-model_amplitude = 8.775038665180102
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -6.47272783024237
-model_offset0 = -0.003809389795954373
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[NGC6334I_alma4_infall_mirror]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.321287015550672 solMass
-model_amplitude = 8.059105246022634
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-model_vsys = -8.131157691426676
-model_offset0 = 0.012543710016940258
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+source = W33A
+alma = 1b
+paval = 180
+pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
+hlines = 38.2 km/s
+rms = 1.3 mJy/beam
+vmax = 33 mJy/beam
 
