--- a/configs/plots/papers/group_pv_maps.2.cfg
+++ b/configs/plots/papers/group_pv_maps.2.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps inferno aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -41,127 +41,8 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G11.92_alma1a_pvmap_rot]
-loc = 0 0
-source = G11.92-0.61
-alma = 1a
-paval = 129
-pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
-hlines = 35.1 km/s
-rms = 1.1 mJy/beam
-vmax = 45 mJy/beam
-
-[G11.92-0.61_alma1a_pvedge]
-loc = 0 0
-structured_array = ../results/G11.92-0.61/c5c8/per_hot_core/alma1a_pvmaps/G11.92-0.61_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA129.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G11.92-0.61_alma1a_keplerian_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 44.46751328093813 solMass
-model_amplitude = -19.86161378765654
-model_x_0 = 0.02967359050445104
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 3.0050221537082416 solMass
-model_vsys = 35.0718928208667
-model_offset0 = 0.009770749516444886
-model_sd_amplitude = 0.6711032958288893
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[G11.92-0.61_alma1a_unrestricted_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -43.14870301882435
-model_x_0 = 0.02967359050445104
-model_alpha = 0.913509817531812
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 35.0718928208667
-model_offset0 = 0.009770749516444886
-model_sd_amplitude = 4.19183432419909
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.05004528940455827
-model_sd_vsys = 0.20156238885738295
-model_sd_offset0 = 0.005728743163311211
-model_info = 1
-
-[G11.92_alma1a_pvmap_out]
-loc = 0 1
-source = G11.92-0.61
-alma = 1a
-paval = 219
-pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.49213_dec-18.90561.PA${paval}.fits
-hlines = 35.1 km/s
-rms = 1.1 mJy/beam
-vmax = 45 mJy/beam
-
-[G11.92-0.61_alma1a_infall]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 44.46751328093813 solMass
-model_amplitude = -19.86161378765654
-model_x_0 = 0.059347181
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 3.0050221537082416 solMass
-model_vsys = 35.0718928208667
-model_offset0 = 0.009770749516444886
-
-[G11.92_alma1b_pvmap_rot]
-loc = 1 0
-source = G11.92-0.61
-alma = 1b
-paval = -15
-pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
-xlim = -0.3 0.3 arcsec
-ylim = 27 45 km/s
-hlines = 37 km/s
-rms = 1.1 mJy/beam
-vmax = 20 mJy/beam
-markers = -0.069 arcsec 33.0 km/s
-markers_physframe = data
-markers_marker = ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
-
-[G11.92_alma1b_pvmap_out]
-loc = 1 1
-source = G11.92-0.61
-alma = 1b
-paval = 75
-pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
-xlim = -0.3 0.3 arcsec
-ylim = 27 45 km/s
-hlines = 37 km/s
-rms = 1.1 mJy/beam
-vmax = 20 mJy/beam
-
 [G11.92_alma3_pvmap_rot]
-loc = 2 0
+loc = 0 0
 source = G11.92-0.61
 alma = 3
 paval = 225
@@ -170,9 +51,10 @@ xlim = -0.35 0.42 arcsec
 hlines = 35.7 km/s
 rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
+spine_color = red
 
 [G11.92-0.61_alma3_pvedge]
-loc = 2 0
+loc = 0 0
 structured_array = ../results/G11.92-0.61/c5c8/per_hot_core/alma3_pvmaps/G11.92-0.61_alma3_rotation.CH3CN_K3.ra273.49223_dec-18.90452.PA225.edge.dat
 marker = o
 color = #46eff2
@@ -180,7 +62,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G11.92-0.61_alma3_keplerian_fit]
-loc = 2 0
+loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -203,7 +85,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G11.92-0.61_alma3_unrestricted_fit]
-loc = 2 0
+loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -224,7 +106,7 @@ model_sd_offset0 = 0.007587837131194743
 model_info = 1
 
 [G11.92_alma3_pvmap_out]
-loc = 2 1
+loc = 0 1
 source = G11.92-0.61
 alma = 3
 paval = 315
@@ -235,7 +117,7 @@ rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
 
 [G11.92-0.61_alma3_infall]
-loc = 2 1
+loc = 0 1
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -251,8 +133,24 @@ model_sd_mass = 0.5696947578482806 solMass
 model_vsys = 35.98235303900969
 model_offset0 = -0.006730312863536275
 
+[G11.92-0.61_alma3_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.001263295019477 solMass
+model_amplitude = 9.87903195940451
+model_x_0 = 0.05934718100890208
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.98235303900969
+model_offset0 = -0.006730312863536275
+model_info = 1
+
 [G29_pvmap_rot]
-loc = 3 0
+loc = 1 0
 source = G29.96-0.02
 alma = 1
 paval = 155
@@ -260,9 +158,10 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.P
 hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
+spine_color = orange
 
 [G29.96-0.02_alma1_pvedge]
-loc = 3 0
+loc = 1 0
 structured_array = ../results/G29.96-0.02/c5c8/per_hot_core/alma1_pvmaps/G29.96-0.02_alma1_rotation.CH3OH_spw0.ra281.51574_dec-2.65622.PA155.edge.dat
 marker = o
 color = #46eff2
@@ -270,7 +169,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G29.96-0.02_alma1_keplerian_fit]
-loc = 3 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
@@ -293,7 +192,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G29.96-0.02_alma1_unrestricted_fit]
-loc = 3 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
@@ -314,7 +213,7 @@ model_sd_offset0 = 0.010886658973200167
 model_info = 1
 
 [G29_pvmap_out]
-loc = 3 1
+loc = 1 1
 source = G29.96-0.02
 alma = 1
 paval = 245
@@ -324,7 +223,7 @@ rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
 
 [G29.96-0.02_alma1_infall]
-loc = 3 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
@@ -340,40 +239,8 @@ model_sd_mass = 3.8898571943793154 solMass
 model_vsys = 97.75379862771113
 model_offset0 = 0.015477065210999274
 
-[G11.92-0.61_alma1a_infall_mirror]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 44.46751328093813 solMass
-model_amplitude = 19.86161378765654
-model_x_0 = 0.05934718100890208
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 35.0718928208667
-model_offset0 = 0.009770749516444886
-model_info = 1
-
-[G11.92-0.61_alma3_infall_mirror]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.001263295019477 solMass
-model_amplitude = 9.87903195940451
-model_x_0 = 0.05934718100890208
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 35.98235303900969
-model_offset0 = -0.006730312863536275
-model_info = 1
-
 [G29.96-0.02_alma1_infall_mirror]
-loc = 3 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
@@ -386,5 +253,223 @@ model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = 97.75379862771113
 model_offset0 = 0.015477065210999274
+model_info = 1
+
+[G333.12_alma1_pvmap_rot]
+loc = 2 0
+source = G333.12-0.56
+alma = 1
+paval = 135
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -58.47 km/s
+rms = 1.8 mJy/beam
+vmax = 27 mJy/beam
+spine_color = red
+
+[G333.12-0.56_alma1_pvedge]
+loc = 2 0
+structured_array = ../results/G333.12-0.56/c5c8/per_hot_core/alma1_pvmaps/G333.12-0.56_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA135.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G333.12-0.56_alma1_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.20371956574227 solMass
+model_amplitude = -11.61363135058741
+model_x_0 = 0.030303030303030304
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.553784099116798 solMass
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+model_sd_amplitude = 0.21150891224839746
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G333.12-0.56_alma1_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -12.454647070207193
+model_x_0 = 0.030303030303030304
+model_alpha = 0.5562764120942513
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+model_sd_amplitude = 0.9632040344859385
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.05754433885344073
+model_sd_vsys = 0.2280643693279834
+model_sd_offset0 = 0.006517855044369618
+model_info = 1
+
+[G333.12_alma1_pvmap_out]
+loc = 2 1
+source = G333.12-0.56
+alma = 1
+paval = 225
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra245.39740_dec-50.68239.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+hlines = -58.47 km/s
+rms = 1.8 mJy/beam
+vmax = 27 mJy/beam
+
+[G333.12-0.56_alma1_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.20371956574227 solMass
+model_amplitude = 11.61363135058741
+model_x_0 = 0.060606060606060608
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.553784099116798 solMass
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+
+[G333.12-0.56_alma1_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.20371956574227 solMass
+model_amplitude = 11.61363135058741
+model_x_0 = 0.06060606060606061
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+model_info = 1
+
+[G333.23_alma3_pvmap_rot]
+loc = 3 0
+source = G333.23-0.06
+alma = 3
+label = ${source} ALMA${alma}a PA=${paval}${deg}
+paval = 220
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
+xlim = -0.4 0.4 arcsec
+hlines = -87.04 km/s
+rms = 1.1 mJy/beam
+vmax = 22 mJy/beam
+spine_color = deepskyblue
+
+[G333.23-0.06_alma3_pvedge]
+loc = 3 0
+structured_array = ../results/G333.23-0.06/c5c8/per_hot_core/alma3_pvmaps/G333.23-0.06_alma3_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA220.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G333.23-0.06_alma3_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.40865048432779 solMass
+model_amplitude = -10.06028417786803
+model_x_0 = 0.019230769230769232
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.01310012340932 solMass
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+model_sd_amplitude = 0.4466818909095302
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G333.23-0.06_alma3_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -17.777338785559206
+model_x_0 = 0.019230769230769232
+model_alpha = 0.8643038392815027
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+model_sd_amplitude = 2.053015482173104
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.06987538714240808
+model_sd_vsys = 0.1708533753375274
+model_sd_offset0 = 0.004107077591354643
+model_info = 1
+
+[G333.23_alma3_pvmap_out]
+loc = 3 1
+source = G333.23-0.06
+alma = 3
+paval = 310
+label = ${source} ALMA${alma}a PA=${paval}${deg}
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra244.96202_dec-50.25292.PA${paval}.fits
+xlim = -0.32 0.32 arcsec
+hlines = -87.04 km/s
+rms = 1.1 mJy/beam
+vmax = 22 mJy/beam
+
+[G333.23-0.06_alma3_infall]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.40865048432779 solMass
+model_amplitude = -10.06028417786803
+model_x_0 = 0.038461538
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.01310012340932 solMass
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+
+[G333.23-0.06_alma3_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.40865048432779 solMass
+model_amplitude = 10.06028417786803
+model_x_0 = 0.038461538461538464
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
 model_info = 1
 
