--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps inferno aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -41,154 +41,8 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G333.46_alma7_pvmap_rot]
-loc = 0 0
-source = G333.46-0.16
-alma = 7
-paval = 130
-pvmap = ${results}/${source}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
-xlim = -0.4 0.4 arcsec
-hlines = -43.2 km/s
-rms = 1.7  mJy/beam
-vmax = 31 mJy/beam
-
-[G333.46-0.16_alma7_pvedge]
-loc = 0 0
-structured_array = ../results/G333.46-0.16/c5c8/per_hot_core/alma7_pvmaps/G333.46-0.16_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA130.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G333.46-0.16_alma7_keplerian_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.573625272663154 solMass
-model_amplitude = -10.132761472616957
-model_x_0 = 0.034482758620689655
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 0.6394808159203227 solMass
-model_vsys = -41.82786192628541
-model_offset0 = -0.017873012828318404
-model_sd_amplitude = 0.27993417884973937
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[G333.46-0.16_alma7_unrestricted_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -9.535800700375663
-model_x_0 = 0.034482758620689655
-model_alpha = 0.44712167917695933
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -41.82786192628541
-model_offset0 = -0.017873012828318404
-model_sd_amplitude = 0.6159236885743851
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.049745093681271314
-model_sd_vsys = 0.22118210744864703
-model_sd_offset0 = 0.00773072329864719
-model_info = 1
-
-[G333.46_alma7_pvmap_out]
-loc = 0 1
-source = G333.46-0.16
-alma = 7
-paval = 220
-pvmap = ${results}/${source}_alma7_rotation.CH3CN_K3.ra245.33405_dec-50.16358.PA${paval}.fits
-xlim = -0.4 0.4 arcsec
-hlines = -43.2 km/s
-rms = 1.7  mJy/beam
-vmax = 31 mJy/beam
-
-[G335.579_alma1_pvmap_rot]
-loc = 1 0
-source = G335.579-0.272
-alma = 1
-paval = 150
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
-hlines = -46.9 km/s
-rms = 1.4 mJy/beam
-vmax = 25 mJy/beam
-
-[G335.579-0.272_alma1_pvedge]
-loc = 1 0
-structured_array = ../results/G335.579-0.272/c5c8/per_hot_core/alma1_pvmaps/G335.579-0.272_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA150.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G335.579-0.272_alma1_keplerian_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.585244955167229 solMass
-model_amplitude = -8.20309830533521
-model_x_0 = 0.03076923076923077
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 0.5128391112577377 solMass
-model_vsys = -46.489225046855466
-model_offset0 = -0.02275026754045532
-model_sd_amplitude = 0.27730611663385735
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[G335.579-0.272_alma1_unrestricted_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -9.40081047583402
-model_x_0 = 0.03076923076923077
-model_alpha = 0.6195567304406051
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -46.489225046855466
-model_offset0 = -0.02275026754045532
-model_sd_amplitude = 0.7461354173140367
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.05487492417770693
-model_sd_vsys = 0.15311844830490848
-model_sd_offset0 = 0.005297545008750506
-model_info = 1
-
-[G335.579_alma1_pvmap_out]
-loc = 1 1
-source = G335.579-0.272
-alma = 1
-paval = 240
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.74486_dec-48.73163.PA${paval}.fits
-hlines = -46.9 km/s
-rms = 1.4 mJy/beam
-vmax = 25 mJy/beam
-
 [G335.579_alma3_pvmap_rot]
-loc = 2 0
+loc = 0 0
 source = G335.579-0.272
 alma = 3
 paval = 202
@@ -196,9 +50,10 @@ pvmap = ${results}/${source}_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.
 hlines = -53.1 km/s
 rms = 1.4 mJy/beam
 vmax = 16 mJy/beam
+spine_color = red
 
 [G335.579-0.272_alma3_pvedge]
-loc = 2 0
+loc = 0 0
 structured_array = ../results/G335.579-0.272/c5c8/per_hot_core/alma3_pvmaps/G335.579-0.272_alma3_rotation.CH3OH_spw0.ra247.74430_dec-48.73089.PA202.edge.dat
 marker = o
 color = #46eff2
@@ -206,7 +61,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G335.579-0.272_alma3_keplerian_fit]
-loc = 2 0
+loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
@@ -229,7 +84,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G335.579-0.272_alma3_unrestricted_fit]
-loc = 2 0
+loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.4950000000000396 0.4950000000000396 arcsec
 yunit = km/s
@@ -250,7 +105,7 @@ model_sd_offset0 = 0.0059462741457193494
 model_info = 1
 
 [G335.579_alma3_pvmap_out]
-loc = 2 1
+loc = 0 1
 source = G335.579-0.272
 alma = 3
 paval = 292
@@ -260,8 +115,40 @@ hlines = -53.1 km/s
 rms = 1.4 mJy/beam
 vmax = 16 mJy/beam
 
+[G335.579-0.272_alma3_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 31.105563629100157 solMass
+model_amplitude = -16.611626147433906
+model_x_0 = 0.06153846153846154
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -48.795327239958205
+model_offset0 = 0.045060647963865365
+model_info = 1
+
+[G335.579-0.272_alma3_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 31.105563629100157 solMass
+model_amplitude = 16.611626147433906
+model_x_0 = 0.06153846153846154
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -48.795327239958205
+model_offset0 = 0.045060647963865365
+model_info = 1
+
 [G335.78_alma1_pvmap_rot]
-loc = 3 0
+loc = 1 0
 source = G335.78+0.17
 alma = 1
 paval = 215
@@ -269,9 +156,10 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.
 hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
+spine_color = deepskyblue
 
 [G335.78+0.17_alma1_pvedge]
-loc = 3 0
+loc = 1 0
 structured_array = ../results/G335.78+0.17/c5c8/per_hot_core/alma1_pvmaps/G335.78+0.17_alma1_rotation.CH3OH_spw0.ra247.44723_dec-48.26452.PA215.edge.dat
 marker = o
 color = #46eff2
@@ -279,7 +167,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G335.78+0.17_alma1_keplerian_fit]
-loc = 3 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -302,7 +190,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G335.78+0.17_alma1_unrestricted_fit]
-loc = 3 0
+loc = 1 0
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
@@ -323,7 +211,7 @@ model_sd_offset0 = 0.010609808048155131
 model_info = 1
 
 [G335.78_alma1_pvmap_out]
-loc = 3 1
+loc = 1 1
 source = G335.78+0.17
 alma = 1
 paval = 305
@@ -332,56 +220,8 @@ hlines = -48.94 km/s
 rms = 1.6 mJy/beam
 vmax = 40 mJy/beam
 
-[G333.46-0.16_alma7_infall]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.573625272663154 solMass
-model_amplitude = -10.132761472616957
-model_x_0 = 0.06896551724137931
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -41.82786192628541
-model_offset0 = -0.017873012828318404
-model_info = 1
-
-[G335.579-0.272_alma1_infall]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.585244955167229 solMass
-model_amplitude = -8.20309830533521
-model_x_0 = 0.06153846153846154
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -46.489225046855466
-model_offset0 = -0.02275026754045532
-model_info = 1
-
-[G335.579-0.272_alma3_infall]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 31.105563629100157 solMass
-model_amplitude = -16.611626147433906
-model_x_0 = 0.06153846153846154
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -48.795327239958205
-model_offset0 = 0.045060647963865365
-model_info = 1
-
 [G335.78+0.17_alma1_infall]
-loc = 3 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
@@ -396,56 +236,8 @@ model_vsys = -50.0253962164979
 model_offset0 = 0.01513677769483081
 model_info = 1
 
-[G333.46-0.16_alma7_infall_mirror]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.573625272663154 solMass
-model_amplitude = 10.132761472616957
-model_x_0 = 0.06896551724137931
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -41.82786192628541
-model_offset0 = -0.017873012828318404
-model_info = 1
-
-[G335.579-0.272_alma1_infall_mirror]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.9900000000000792 0.9900000000000792 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.585244955167229 solMass
-model_amplitude = 8.20309830533521
-model_x_0 = 0.06153846153846154
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -46.489225046855466
-model_offset0 = -0.02275026754045532
-model_info = 1
-
-[G335.579-0.272_alma3_infall_mirror]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 31.105563629100157 solMass
-model_amplitude = 16.611626147433906
-model_x_0 = 0.06153846153846154
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -48.795327239958205
-model_offset0 = 0.045060647963865365
-model_info = 1
-
 [G335.78+0.17_alma1_infall_mirror]
-loc = 3 1
+loc = 1 1
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
 sampling = 500
@@ -458,5 +250,215 @@ model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = -50.0253962164979
 model_offset0 = 0.01513677769483081
+model_info = 1
+
+[G335.78_alma2_pvmap_rot]
+loc = 2 0
+source = G335.78+0.17
+alma = 2
+paval = 65
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
+hlines = -50.51 km/s
+rms = 1.8 mJy/beam
+vmax = 32 mJy/beam
+spine_color = orange
+
+[G335.78+0.17_alma2_pvedge]
+loc = 2 0
+structured_array = ../results/G335.78+0.17/c5c8/per_hot_core/alma2_pvmaps/G335.78+0.17_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA65.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G335.78+0.17_alma2_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.820392300695831 solMass
+model_amplitude = -9.333779340994685
+model_x_0 = 0.03125
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.2125412586998687 solMass
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_sd_amplitude = 0.5762291466581538
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G335.78+0.17_alma2_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -11.560809188013495
+model_x_0 = 0.03125
+model_alpha = 0.6579468211373942
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_sd_amplitude = 2.5340947064717794
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.15349592108247886
+model_sd_vsys = 0.46683368484608706
+model_sd_offset0 = 0.015232943094558174
+model_info = 1
+
+[G335.78_alma2_pvmap_out]
+loc = 2 1
+source = G335.78+0.17
+alma = 2
+paval = 155
+pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
+xlim = -0.3 0.4 arcsec
+hlines = -50.51 km/s
+rms = 1.8 mJy/beam
+vmax = 32 mJy/beam
+
+[G335.78+0.17_alma2_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.820392300695831 solMass
+model_amplitude = -9.333779340994685
+model_x_0 = 0.0625
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_info = 1
+
+[G335.78+0.17_alma2_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.820392300695831 solMass
+model_amplitude = 9.333779340994685
+model_x_0 = 0.0625
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_info = 1
+
+[G336_alma1_pvmap_rot]
+loc = 3 0
+source = G336.01-0.82
+alma = 1
+paval = 125
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
+hlines = -47.2 km/s
+rms = 1.7 mJy/beam
+vmax = 60 mJy/beam
+
+[G336.01-0.82_alma1_pvedge]
+loc = 3 0
+structured_array = ../results/G336.01-0.82/c5c8/per_hot_core/alma1_pvmaps/G336.01-0.82_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA125.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G336.01-0.82_alma1_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 14.299712876295894 solMass
+model_amplitude = -11.263069647401139
+model_x_0 = 0.03225806451612903
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 2.715399447880534 solMass
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
+model_sd_amplitude = 1.0693827689607174
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G336.01-0.82_alma1_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -184.05211236432362
+model_x_0 = 0.03225806451612903
+model_alpha = 2.0942879803273646
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
+model_sd_amplitude = 153.43490047071938
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.4583633122619938
+model_sd_vsys = 0.5589777213771441
+model_sd_offset0 = 0.015442115748711394
+model_info = 1
+
+[G336_alma1_pvmap_out]
+loc = 3 1
+source = G336.01-0.82
+alma = 1
+paval = 215
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
+hlines = -47.2 km/s
+rms = 1.7 mJy/beam
+vmax = 60 mJy/beam
+
+[G336.01-0.82_alma1_infall]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 14.299712876295894 solMass
+model_amplitude = -11.263069647401139
+model_x_0 = 0.06451612903225806
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
+model_info = 1
+
+[G336.01-0.82_alma1_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 14.299712876295894 solMass
+model_amplitude = 11.263069647401139
+model_x_0 = 0.06451612903225806
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
 model_info = 1
 
