--- a/configs/plots/papers/group_pv_maps.5.cfg
+++ b/configs/plots/papers/group_pv_maps.5.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps inferno aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -41,153 +41,8 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G335.78_alma2_pvmap_rot]
-loc = 0 0
-source = G335.78+0.17
-alma = 2
-paval = 65
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
-hlines = -50.51 km/s
-rms = 1.8 mJy/beam
-vmax = 32 mJy/beam
-
-[G335.78+0.17_alma2_pvedge]
-loc = 0 0
-structured_array = ../results/G335.78+0.17/c5c8/per_hot_core/alma2_pvmaps/G335.78+0.17_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA65.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G335.78+0.17_alma2_keplerian_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 9.820392300695831 solMass
-model_amplitude = -9.333779340994685
-model_x_0 = 0.03125
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 1.2125412586998687 solMass
-model_vsys = -51.57888912018678
-model_offset0 = 0.011090403516737058
-model_sd_amplitude = 0.5762291466581538
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[G335.78+0.17_alma2_unrestricted_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -11.560809188013495
-model_x_0 = 0.03125
-model_alpha = 0.6579468211373942
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -51.57888912018678
-model_offset0 = 0.011090403516737058
-model_sd_amplitude = 2.5340947064717794
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.15349592108247886
-model_sd_vsys = 0.46683368484608706
-model_sd_offset0 = 0.015232943094558174
-model_info = 1
-
-[G335.78_alma2_pvmap_out]
-loc = 0 1
-source = G335.78+0.17
-alma = 2
-paval = 155
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra247.44221_dec-48.26388.PA${paval}.fits
-xlim = -0.3 0.4 arcsec
-hlines = -50.51 km/s
-rms = 1.8 mJy/beam
-vmax = 32 mJy/beam
-
-[G336_alma1_pvmap_rot]
-loc = 1 0
-source = G336.01-0.82
-alma = 1
-paval = 125
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
-hlines = -47.2 km/s
-rms = 1.7 mJy/beam
-vmax = 60 mJy/beam
-
-[G336.01-0.82_alma1_pvedge]
-loc = 1 0
-structured_array = ../results/G336.01-0.82/c5c8/per_hot_core/alma1_pvmaps/G336.01-0.82_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA125.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G336.01-0.82_alma1_keplerian_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.48950000000007116 0.48950000000007116 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 14.299712876295894 solMass
-model_amplitude = -11.263069647401139
-model_x_0 = 0.03225806451612903
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 2.715399447880534 solMass
-model_vsys = -45.4206077372057
-model_offset0 = 0.004437441478521859
-model_sd_amplitude = 1.0693827689607174
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[G336.01-0.82_alma1_unrestricted_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.48950000000007116 0.48950000000007116 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -184.05211236432362
-model_x_0 = 0.03225806451612903
-model_alpha = 2.0942879803273646
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -45.4206077372057
-model_offset0 = 0.004437441478521859
-model_sd_amplitude = 153.43490047071938
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.4583633122619938
-model_sd_vsys = 0.5589777213771441
-model_sd_offset0 = 0.015442115748711394
-model_info = 1
-
-[G336_alma1_pvmap_out]
-loc = 1 1
-source = G336.01-0.82
-alma = 1
-paval = 215
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra248.78858_dec-48.77991.PA${paval}.fits
-hlines = -47.2 km/s
-rms = 1.7 mJy/beam
-vmax = 60 mJy/beam
-
 [G34_alma1_pvmap_rot]
-loc = 2 0
+loc = 0 0
 source = G34.43+0.24
 alma = 1
 paval = 280
@@ -195,9 +50,10 @@ pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA
 hlines = 58.44 km/s
 rms = 1.3 mJy/beam
 vmax = 35 mJy/beam
+spine_color = red
 
 [G34.43+0.24_alma1_pvedge]
-loc = 2 0
+loc = 0 0
 structured_array = ../results/G34.43+0.24/c5c8/per_hot_core/alma1_pvmaps/G34.43+0.24_alma1_rotation.CH3OH_spw0.ra283.32503_dec1.42373.PA280.edge.dat
 marker = o
 color = #46eff2
@@ -205,7 +61,7 @@ linestyle = none
 plot_keys = OFFSET, VRAD
 
 [G34.43+0.24_alma1_keplerian_fit]
-loc = 2 0
+loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
@@ -228,7 +84,7 @@ model_sd_offset0 = 0.0
 model_info = 1
 
 [G34.43+0.24_alma1_unrestricted_fit]
-loc = 2 0
+loc = 0 0
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 yunit = km/s
@@ -249,7 +105,7 @@ model_sd_offset0 = 0.015888356226855384
 model_info = 1
 
 [G34_alma1_pvmap_out]
-loc = 2 1
+loc = 0 1
 source = G34.43+0.24
 alma = 1
 paval = 10
@@ -258,66 +114,8 @@ hlines = 58.44 km/s
 rms = 1.3 mJy/beam
 vmax = 35 mJy/beam
 
-[G343_alma1_pvmap_rot]
-loc = 3 0
-source = G343.12-0.06
-alma = 1
-paval = 230
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
-hlines = -33.71 km/s
-rms = 1.1 mJy/beam
-vmax = 40 mJy/beam
-markers = 0.23 arcsec -31.3 km/s, -0.16 arcsec -40.1 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
-
-[G343_alma1_pvmap_out]
-loc = 3 1
-source = G343.12-0.06
-alma = 1
-paval = 320
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra254.57170_dec-42.86873.PA${paval}.fits
-hlines = -33.71 km/s
-rms = 1.1 mJy/beam
-vmax = 40 mJy/beam
-
-[G335.78+0.17_alma2_infall]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 9.820392300695831 solMass
-model_amplitude = -9.333779340994685
-model_x_0 = 0.0625
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -51.57888912018678
-model_offset0 = 0.011090403516737058
-model_info = 1
-
-[G336.01-0.82_alma1_infall]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.48950000000007116 0.48950000000007116 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 14.299712876295894 solMass
-model_amplitude = -11.263069647401139
-model_x_0 = 0.06451612903225806
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -45.4206077372057
-model_offset0 = 0.004437441478521859
-model_info = 1
-
 [G34.43+0.24_alma1_infall]
-loc = 2 1
+loc = 0 1
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
@@ -332,40 +130,8 @@ model_vsys = 58.7369732510932
 model_offset0 = -0.020445275852170534
 model_info = 1
 
-[G335.78+0.17_alma2_infall_mirror]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 9.820392300695831 solMass
-model_amplitude = 9.333779340994685
-model_x_0 = 0.0625
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -51.57888912018678
-model_offset0 = 0.011090403516737058
-model_info = 1
-
-[G336.01-0.82_alma1_infall_mirror]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.48950000000007116 0.48950000000007116 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 14.299712876295894 solMass
-model_amplitude = 11.263069647401139
-model_x_0 = 0.06451612903225806
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -45.4206077372057
-model_offset0 = 0.004437441478521859
-model_info = 1
-
 [G34.43+0.24_alma1_infall_mirror]
-loc = 2 1
+loc = 0 1
 function = piecewise_powerlaw
 xrange = -0.9879999999999696 0.9879999999999696 arcsec
 sampling = 500
@@ -378,5 +144,324 @@ model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_vsys = 58.7369732510932
 model_offset0 = -0.020445275852170534
+model_info = 1
+
+[G35.03_alma1_pvmap_rot]
+loc = 1 0
+source = G35.03+0.35_A
+alma = 1
+paval = 310
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
+xlim = -0.55 0.55 arcsec
+hlines = 45.94 km/s
+rms = 1.9 mJy/beam
+vmax = 41 mJy/beam
+spine_color = orange
+
+[G35.03+0.35_A_alma1_pvedge]
+loc = 1 0
+structured_array = ../results/G35.03+0.35_A/c5c8/per_hot_core/alma1_pvmaps/G35.03+0.35_A_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA310.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.03+0.35_A_alma1_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 20.071282619834534 solMass
+model_amplitude = -13.343835335574317
+model_x_0 = 0.04310344827586207
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.962186116047663 solMass
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_sd_amplitude = 0.652252497416779
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.03+0.35_A_alma1_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -18.413754787280524
+model_x_0 = 0.04310344827586207
+model_alpha = 0.7199416450495963
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_sd_amplitude = 10.126676069471518
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.39073956762222867
+model_sd_vsys = 1.5252624460937119
+model_sd_offset0 = 0.051778547408177306
+model_info = 1
+
+[G35.03_alma1_pvmap_out]
+loc = 1 1
+source = G35.03+0.35_A
+alma = 1
+paval = 40
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra283.50271_dec2.02204.PA${paval}.fits
+xlim = -0.55 0.55 arcsec
+hlines = 45.94 km/s
+rms = 1.9 mJy/beam
+vmax = 41 mJy/beam
+
+[G35.03+0.35_A_alma1_infall]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 20.071282619834534 solMass
+model_amplitude = -13.343835335574317
+model_x_0 = 0.08620689655172414
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_info = 1
+
+[G35.03+0.35_A_alma1_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 20.071282619834534 solMass
+model_amplitude = 13.343835335574317
+model_x_0 = 0.08620689655172414
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_info = 1
+
+[G35.13_alma1_pvmap_rot]
+loc = 2 0
+source = G35.13-0.74
+alma = 1
+paval = 45
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
+hlines = 35.93 km/s
+rms = 2.5 mJy/beam
+vmax = 56 mJy/beam
+spine_color = red
+
+[G35.13-0.74_alma1_pvedge]
+loc = 2 0
+structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma1_pvmaps/G35.13-0.74_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA45.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.13-0.74_alma1_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.75143302495276 solMass
+model_amplitude = -7.739111306374149
+model_x_0 = 0.045454545454545456
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.41999920417790904 solMass
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_sd_amplitude = 0.24072079051277734
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.13-0.74_alma1_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -7.469695960252546
+model_x_0 = 0.045454545454545456
+model_alpha = 0.46040172522710054
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_sd_amplitude = 0.4891100861481627
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.057193319610883996
+model_sd_vsys = 0.20721411799671294
+model_sd_offset0 = 0.008457018059899641
+model_info = 1
+
+[G35.13_alma1_pvmap_out]
+loc = 2 1
+source = G35.13-0.74
+alma = 1
+paval = 135
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra284.52557_dec1.61873.PA${paval}.fits
+hlines = 35.93 km/s
+rms = 2.5 mJy/beam
+vmax = 56 mJy/beam
+
+[G35.13-0.74_alma1_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.75143302495276 solMass
+model_amplitude = -7.739111306374149
+model_x_0 = 0.09090909090909091
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_info = 1
+
+[G35.13-0.74_alma1_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.75143302495276 solMass
+model_amplitude = 7.739111306374149
+model_x_0 = 0.09090909090909091
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_info = 1
+
+[G35.13_alma2_pvmap_rot]
+loc = 3 0
+source = G35.13-0.74
+alma = 2
+paval = 75
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
+xlim = -0.25 0.23 arcsec
+hlines = 34.39 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
+spine_color = deepskyblue
+
+[G35.13-0.74_alma2_pvedge]
+loc = 3 0
+structured_array = ../results/G35.13-0.74/c5c8/per_hot_core/alma2_pvmaps/G35.13-0.74_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA75.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[G35.13-0.74_alma2_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 2.7193722611889983 solMass
+model_amplitude = -4.911650348614933
+model_x_0 = 0.045454545454545456
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.3831007504040061 solMass
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
+model_sd_amplitude = 0.34597266456151854
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[G35.13-0.74_alma2_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -5.919528928445707
+model_x_0 = 0.045454545454545456
+model_alpha = 0.966285077348988
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
+model_sd_amplitude = 1.3419120118732828
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.3806739827909846
+model_sd_vsys = 0.6739530803973826
+model_sd_offset0 = 0.01498763700221359
+model_info = 1
+
+[G35.13_alma2_pvmap_out]
+loc = 3 1
+source = G35.13-0.74
+alma = 2
+paval = 165
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra284.52570_dec1.61893.PA${paval}.fits
+xlim = -0.23 0.23 arcsec
+hlines = 34.39 km/s
+rms = 2.5 mJy/beam
+vmax = 25 mJy/beam
+
+[G35.13-0.74_alma2_infall]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 2.7193722611889983 solMass
+model_amplitude = -4.911650348614933
+model_x_0 = 0.09090909090909091
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
+model_info = 1
+
+[G35.13-0.74_alma2_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 2.7193722611889983 solMass
+model_amplitude = 4.911650348614933
+model_x_0 = 0.09090909090909091
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
 model_info = 1
 
