--- a/configs/plots/papers/group_pv_maps.7.cfg
+++ b/configs/plots/papers/group_pv_maps.7.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps inferno aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -41,181 +41,429 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[G35.20_alma1_pvmap_rot]
+[IRAS_181622048_alma1_pvmap_rot]
 loc = 0 0
-source = G35.20-0.74_N
+source = IRAS_181622048
 alma = 1
-paval = -10
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
-xlim = -0.52 0.52 arcsec
-hlines = 32.11 km/s
-rms = 2.5 mJy/beam
-vmax = 86 mJy/beam
+paval = -70
+label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
+xlim = -0.55 0.55 arcsec
+hlines = 47.0 km/s
+rms = 1.2 mJy/beam
+vmax = 30 mJy/beam
+spine_color = red
 
-[G35.20-0.74_N_alma1_pvedge]
+[IRAS_181622048_alma1_pvedge]
 loc = 0 0
-structured_array = ../results/G35.20-0.74_N/c5c8/per_hot_core/alma1_pvmaps/G35.20-0.74_N_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA-10.edge.dat
+structured_array = ../results/IRAS_181622048/c5c8/per_hot_core/alma1_pvmaps/IRAS_181622048_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA-70.edge.dat
 marker = o
 color = #46eff2
 linestyle = none
 plot_keys = OFFSET, VRAD
 
-[G35.20-0.74_N_alma1_keplerian_fit]
+[IRAS_181622048_alma1_keplerian_fit]
 loc = 0 0
 function = piecewise_powerlaw
-xrange = -0.9879999999999696 0.9879999999999696 arcsec
+xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 3.87439880274262 solMass
-model_amplitude = -5.86266760723382
-model_x_0 = 0.045662100456621
+model_mass = 11.908809183989916 solMass
+model_sd_mass = 0.6343612374554848 solMass
+model_amplitude = -10.278441756673729
+model_x_0 = 0.07692307692307693
+model_alpha = 0.5
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_sd_amplitude = 0.27375722169784306
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[IRAS_181622048_alma1_unrestricted_fit]
+loc = 0 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -8.75981717721464
+model_x_0 = 0.07692307692307693
+model_alpha = 0.3411014797047861
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_sd_amplitude = 0.8159691253402466
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.09069767258886366
+model_sd_vsys = 0.4422981025697157
+model_sd_offset0 = 0.03975000575012083
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[IRAS_181622048_alma1_pvmap_out]
+loc = 0 1
+source = IRAS_181622048
+alma = 1
+paval = 20
+label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
+xlim = -0.5 0.5 arcsec
+hlines = 47.0 km/s
+rms = 1.2 mJy/beam
+vmax = 30 mJy/beam
+
+[IRAS_181622048_alma1_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.908809183989916 solMass
+model_amplitude = -10.278441756673729
+model_x_0 = 0.15384615384615385
+model_alpha = 0.5
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[IRAS_181622048_alma1_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.908809183989916 solMass
+model_amplitude = 10.278441756673729
+model_x_0 = 0.15384615384615385
+model_alpha = 0.5
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[I18182_alma3_pvmap_rot]
+loc = 1 0
+source = IRAS_18182-1433
+alma = 3
+paval = 10
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 40 mJy/beam
+spine_color = orange
+
+[IRAS_18182-1433_alma3_pvedge]
+loc = 1 0
+structured_array = ../results/IRAS_18182-1433/c5c8/per_hot_core/alma3_pvmaps/IRAS_18182-1433_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA10.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[IRAS_18182-1433_alma3_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.27677520629488 solMass
+model_amplitude = -12.380108539151216
+model_x_0 = 0.027932960893854747
 model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 0.8119671605894117 solMass
-model_vsys = 31.789021824430836
-model_offset0 = -0.03433463506282461
-model_sd_amplitude = 0.6143267398228901
+model_sd_mass = 1.2395565287567358 solMass
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_sd_amplitude = 0.4441177298188892
 model_sd_x_0 = 0.0
 model_sd_alpha = 0.0
 model_sd_vsys = 0.0
 model_sd_offset0 = 0.0
 model_info = 1
 
-[G35.20-0.74_N_alma1_unrestricted_fit]
-loc = 0 0
+[IRAS_18182-1433_alma3_unrestricted_fit]
+loc = 1 0
 function = piecewise_powerlaw
-xrange = -0.9879999999999696 0.9879999999999696 arcsec
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -14.54962691386968
-model_x_0 = 0.045662100456621
-model_alpha = 1.1447219169301803
+model_amplitude = -17.164808842139003
+model_x_0 = 0.027932960893854747
+model_alpha = 0.7093529553250641
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 31.789021824430836
-model_offset0 = -0.03433463506282461
-model_sd_amplitude = 5.296590707649587
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_sd_amplitude = 1.7328587405640883
 model_sd_x_0 = 0.0
-model_sd_alpha = 0.23291191336427927
-model_sd_vsys = 0.2735193376726168
-model_sd_offset0 = 0.019760674230149263
+model_sd_alpha = 0.05803700154932522
+model_sd_vsys = 0.19196252926004218
+model_sd_offset0 = 0.006450104777827863
 model_info = 1
 
-[G35.20_alma1_pvmap_out]
-loc = 0 1
-source = G35.20-0.74_N
-alma = 1
-paval = 80
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra284.55397_dec1.67705.PA${paval}.fits
-xlim = -0.52 0.52 arcsec
-hlines = 32.11 km/s
-rms = 2.5 mJy/beam
-vmax = 86 mJy/beam
-
-[G351_alma2_pvmap_rot]
-loc = 1 0
-source = G351.77-0.54
-alma = 2
-paval = 130
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
-hlines = -3.83 km/s
-rms = 2.0 mJy/beam
-vmax = 45 mJy/beam
-
-[G351_alma2_pvmap_out]
+[I18182_alma3_pvmap_out]
 loc = 1 1
-source = G351.77-0.54
-alma = 2
-paval = 220
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra261.67722_dec-36.15483.PA${paval}.fits
-hlines = -3.83 km/s
-rms = 2.0 mJy/beam
+source = IRAS_18182-1433
+alma = 3
+paval = 100
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
+hlines = 61.12 km/s
+rms = 1.4 mJy/beam
+vmax = 40 mJy/beam
+
+[IRAS_18182-1433_alma3_infall]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.27677520629488 solMass
+model_amplitude = -12.380108539151216
+model_x_0 = 0.055865921787709494
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_info = 1
+
+[IRAS_18182-1433_alma3_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.27677520629488 solMass
+model_amplitude = 12.380108539151216
+model_x_0 = 0.055865921787709494
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_info = 1
+
+[NGC6334I_alma1_pvmap_rot]
+loc = 2 0
+source = NGC6334I
+alma = 1
+paval = 60
+pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
+hlines = -8.0 km/s
+rms = 1.5 mJy/beam
+vmax = 45 mJy/beam
+spine_color = red
+
+[NGC6334I_alma1_pvedge]
+loc = 2 0
+structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma1_pvmaps/NGC6334I_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA60.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC6334I_alma1_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 8.67984271557738 solMass
+model_sd_mass = 0.8894660145924915 solMass
+model_amplitude = -8.775038665180102
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_sd_amplitude = 0.44961060500585176
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma1_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.661298770429125
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5745542962356066
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_sd_amplitude = 1.4539993643115503
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.09894119576073762
+model_sd_vsys = 0.3104210015818551
+model_sd_offset0 = 0.02896689871324351
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma1_pvmap_out]
+loc = 2 1
+source = NGC6334I
+alma = 1
+paval = 150
+pvmap = ${results}/${source}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
+hlines = -8.0 km/s
+rms = 1.5 mJy/beam
 vmax = 45 mJy/beam
 
-[I16562_alma1_pvmap_rot]
-loc = 2 0
-source = IRAS_165623959
-alma = 1
-paval = 10
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
-hlines = -16.86 km/s
-rms = 1.4 mJy/beam
-vmax = 32 mJy/beam
-
-[I16562_alma1_pvmap_out]
+[NGC6334I_alma1_infall]
 loc = 2 1
-source = IRAS_165623959
-alma = 1
-paval = 100
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
-hlines = -16.86 km/s
-rms = 1.4 mJy/beam
-vmax = 32 mJy/beam
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 8.67984271557738 solMass
+model_amplitude = -8.775038665180102
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
-[I16562_alma2_pvmap_rot]
+[NGC6334I_alma1_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 8.67984271557738 solMass
+model_amplitude = 8.775038665180102
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma4_pvmap_rot]
 loc = 3 0
-source = IRAS_165623959
-alma = 2
-paval = 225
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
-xlim = -0.25 0.25 arcsec
-hlines = -11.65 km/s
-rms = 1.4 mJy/beam
-vmax = 20 mJy/beam
-markers = 0.079 arcsec -9.3 km/s, -0.053 arcsec -14.6 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
+source = NGC6334I
+alma = 4
+paval = 20
+pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
+hlines = -6.92 km/s
+rms = 1.5 mJy/beam
+vmax = 50 mJy/beam
+spine_color = deepskyblue
 
-[I16562_alma2_pvmap_out]
+[NGC6334I_alma4_pvedge]
+loc = 3 0
+structured_array = ../results/NGC6334I/c5c8/per_hot_core/alma4_pvmaps/NGC6334I_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA20.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC6334I_alma4_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.321287015550672 solMass
+model_sd_mass = 1.2651733039128334 solMass
+model_amplitude = -8.059105246022634
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
+model_sd_amplitude = 0.696336913785424
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma4_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -23.753747130049224
+model_x_0 = 0.07407407407407407
+model_alpha = 1.3305393175883473
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
+model_sd_amplitude = 5.588260484571349
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.15263612206132474
+model_sd_vsys = 0.2024794157364633
+model_sd_offset0 = 0.01705269945191324
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma4_pvmap_out]
 loc = 3 1
-source = IRAS_165623959
-alma = 2
-paval = 315
-label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
-xlim = -0.25 0.25 arcsec
-hlines = -11.65 km/s
-rms = 1.4 mJy/beam
-vmax = 20 mJy/beam
+source = NGC6334I
+alma = 4
+paval = 110
+pvmap = ${results}/${source}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
+hlines = -6.92 km/s
+rms = 1.5 mJy/beam
+vmax = 50 mJy/beam
 
-[G35.20-0.74_N_alma1_infall]
-loc = 0 1
+[NGC6334I_alma4_infall]
+loc = 3 1
 function = piecewise_powerlaw
-xrange = -0.9879999999999696 0.9879999999999696 arcsec
+xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 3.87439880274262 solMass
-model_amplitude = -5.86266760723382
-model_x_0 = 0.091324200913242
+model_mass = 7.321287015550672 solMass
+model_amplitude = -8.059105246022634
+model_x_0 = 0.14814814814814814
 model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 31.789021824430836
-model_offset0 = -0.03433463506282461
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
 model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
-[G35.20-0.74_N_alma1_infall_mirror]
-loc = 0 1
+[NGC6334I_alma4_infall_mirror]
+loc = 3 1
 function = piecewise_powerlaw
-xrange = -0.9879999999999696 0.9879999999999696 arcsec
+xrange = -0.9945 0.9945 arcsec
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 3.87439880274262 solMass
-model_amplitude = 5.86266760723382
-model_x_0 = 0.091324200913242
+model_mass = 7.321287015550672 solMass
+model_amplitude = 8.059105246022634
+model_x_0 = 0.14814814814814814
 model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 31.789021824430836
-model_offset0 = -0.03433463506282461
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
 model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
