--- a/configs/plots/papers/group_pv_maps.11.cfg
+++ b/configs/plots/papers/group_pv_maps.11.cfg
@@ -43,196 +43,117 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[W33A_alma1b_pvmap_rot]
+[I16562_alma1_pvmap_rot]
 loc = 0 0
-source = W33A
-alma = 1b
-paval = 90
-pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
-hlines = 38.2 km/s
-rms = 1.3 mJy/beam
-vmax = 33 mJy/beam
-markers = -0.17 arcsec 31.9 km/s
-markers_physframe = data
-markers_marker = ^
-markers_mec = #46eff2
-markers_ms = 10
+source = IRAS_165623959
+alma = 1
+paval = 10
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
+hlines = -16.86 km/s
+rms = 1.4 mJy/beam
+vmax = 32 mJy/beam
 
-[W33A_alma1b_pvmap_out]
+[I16562_alma1_pvmap_out]
 loc = 0 1
-source = W33A
-alma = 1b
-paval = 180
-pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra273.66468_dec-17.86679.PA${paval}.fits
-hlines = 38.2 km/s
-rms = 1.3 mJy/beam
-vmax = 33 mJy/beam
+source = IRAS_165623959
+alma = 1
+paval = 100
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra254.92344_dec-40.06212.PA${paval}.fits
+hlines = -16.86 km/s
+rms = 1.4 mJy/beam
+vmax = 32 mJy/beam
 
-[G35.20_alma2_pvmap_rot]
+[I16562_alma2_pvmap_rot]
 loc = 1 0
-source = G35.20-0.74_N
+source = IRAS_165623959
 alma = 2
-paval = -23
-label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
-xlim = -0.48 0.48 arcsec
-ylim = 20 40 km/s
-hlines = 30.0 km/s
-rms = 2.5 mJy/beam
-vmax = 25 mJy/beam
-markers = -0.32 arcsec 26.0 km/s, 0.030 arcsec 32.9 km/s
+paval = 225
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = -11.65 km/s
+rms = 1.4 mJy/beam
+vmax = 20 mJy/beam
+markers = 0.079 arcsec -9.3 km/s, -0.053 arcsec -14.6 km/s
 markers_physframe = data
-markers_marker = ^, v
+markers_marker = v, ^
 markers_mec = #46eff2
+markers_mfc = #46eff2
 markers_ms = 10
 
-[G35.20_alma2_pvmap_out]
+[I16562_alma2_pvmap_out]
 loc = 1 1
-source = G35.20-0.74_N
+source = IRAS_165623959
 alma = 2
-paval = 67
-label = G35.20-0.74 N ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra284.55432_dec1.67665.PA${paval}.fits
-xlim = -0.48 0.48 arcsec
-ylim = 20 40 km/s
-hlines = 30.0 km/s
-rms = 2.5 mJy/beam
-vmax = 60 mJy/beam
+paval = 315
+label = IRAS 16562-3959 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra254.92120_dec-40.06086.PA${paval}.fits
+xlim = -0.25 0.25 arcsec
+hlines = -11.65 km/s
+rms = 1.4 mJy/beam
+vmax = 20 mJy/beam
 
-[IRAS_181622048_alma1_pvmap_rot]
+[I18182_alma1_pvmap_rot]
 loc = 2 0
-source = IRAS_181622048
+xticks_fmt = {x:.2f}
+source = IRAS_18182-1433
 alma = 1
-paval = -70
-label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
-xlim = -0.55 0.55 arcsec
-hlines = 47.0 km/s
-rms = 1.2 mJy/beam
-vmax = 30 mJy/beam
-
-[IRAS_181622048_alma1_pvmap_out]
-loc = 2 1
-source = IRAS_181622048
-alma = 1
-paval = 20
-label = IRAS 18162-2048 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA${paval}.fits
-xlim = -0.5 0.5 arcsec
-hlines = 47.0 km/s
-rms = 1.2 mJy/beam
-vmax = 30 mJy/beam
-
-[IRAS_181622048_alma1_pvedge]
-loc = 2 0
-structured_array = ../results/IRAS_181622048/c5c8/per_hot_core/alma1_pvmaps/IRAS_181622048_alma1_rotation.c-HCOOH_spw3.ra274.80040_dec-20.79193.PA-70.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[G14.22-0.50_S_alma1_pvmap_rot]
-loc = 3 0
-source = G14.22-0.50_S
-alma = 1
-paval = 170
-pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
-xlim = -0.1 0.1 arcsec
-ylim = 10 30 km/s
-hlines = 19.61 km/s
-rms = 1.3 mJy/beam
-vmax = 15 mJy/beam
-markers = -0.048 arcsec 15.7 km/s, 0.045 arcsec 23.9 km/s
+paval = 40
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+xlim = -0.2 0.15 arcsec
+hlines = 62.78 km/s
+rms = 1.4 mJy/beam
+vmax = 11 mJy/beam
+markers = 0.017 arcsec 66.3 km/s, -0.077 arcsec 61.0 km/s
 markers_physframe = data
-markers_marker = ^, v
+markers_marker = v, ^
 markers_mec = #46eff2
+markers_mfc = #46eff2
 markers_ms = 10
 
-[G14.22-0.50_S_alma1_pvmap_out]
-loc = 3 1
-source = G14.22-0.50_S
+[I18182_alma1_pvmap_out]
+loc = 2 1
+source = IRAS_18182-1433
 alma = 1
-paval = 260
-pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
-xlim = -0.1 0.1 arcsec
-ylim = 10 30 km/s
-hlines = 19.61 km/s
-rms = 1.3 mJy/beam
+paval = 130
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
+xlim = -0.18 0.18 arcsec
+hlines = 62.78 km/s
+rms = 1.4 mJy/beam
+vmax = 11 mJy/beam
+
+[I18182_alma2_pvmap_rot]
+loc = 3 0
+xticks_fmt = {x:.2f}
+source = IRAS_18182-1433
+alma = 2
+paval = 0
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
+xlim = -0.15 0.2 arcsec
+hlines = 60.64 km/s
+rms = 1.4 mJy/beam
 vmax = 15 mJy/beam
+markers = 0.077 arcsec 63.7 km/s, -0.035 arcsec 57.1 km/s
+markers_physframe = data
+markers_marker = v, ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
 
-[IRAS_181622048_alma1_keplerian_fit]
-loc = 2 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.908809183989916 solMass
-model_sd_mass = 0.6343612374554848 solMass
-model_amplitude = -10.278441756673729
-model_x_0 = 0.07692307692307693
-model_alpha = 0.5
-model_vsys = 44.30391095786052
-model_offset0 = 0.01938786815015558
-model_sd_amplitude = 0.27375722169784306
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[IRAS_181622048_alma1_unrestricted_fit]
-loc = 2 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -8.75981717721464
-model_x_0 = 0.07692307692307693
-model_alpha = 0.3411014797047861
-model_vsys = 44.30391095786052
-model_offset0 = 0.01938786815015558
-model_sd_amplitude = 0.8159691253402466
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.09069767258886366
-model_sd_vsys = 0.4422981025697157
-model_sd_offset0 = 0.03975000575012083
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[IRAS_181622048_alma1_infall]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.908809183989916 solMass
-model_amplitude = -10.278441756673729
-model_x_0 = 0.15384615384615385
-model_alpha = 0.5
-model_vsys = 44.30391095786052
-model_offset0 = 0.01938786815015558
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-
-[IRAS_181622048_alma1_infall_mirror]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 11.908809183989916 solMass
-model_amplitude = 10.278441756673729
-model_x_0 = 0.15384615384615385
-model_alpha = 0.5
-model_vsys = 44.30391095786052
-model_offset0 = 0.01938786815015558
-model_info = 1
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+[I18182_alma2_pvmap_out]
+loc = 3 1
+source = IRAS_18182-1433
+alma = 2
+paval = 90
+label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
+xlim = -0.18 0.22 arcsec
+hlines = 60.64 km/s
+rms = 1.4 mJy/beam
+vmax = 15 mJy/beam
 
