--- a/configs/plots/papers/group_pv_maps.8.cfg
+++ b/configs/plots/papers/group_pv_maps.8.cfg
@@ -3,7 +3,7 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-styles = maps inferno aspect_auto
+styles = maps inferno aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
@@ -41,277 +41,429 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[I18089_alma1_pvmap_rot]
+[NGC6334IN_alma1_pvmap_rot]
 loc = 0 0
-source = IRAS_180891732
+source = NGC_6334_I_N
 alma = 1
-paval = 245
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
-hlines = 32.88 km/s
-rms = 1.6 mJy/beam
-vmax = 52 mJy/beam
+paval = 310
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
+hlines = -1.77 km/s
+rms = 1.7 mJy/beam
+vmax = 22 mJy/beam
+spine_color = red
 
-[IRAS_180891732_alma1_pvedge]
+[NGC_6334_I_N_alma1_pvedge]
 loc = 0 0
-structured_array = ../results/IRAS_180891732/c5c8/per_hot_core/alma1_pvmaps/IRAS_180891732_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA245.edge.dat
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma1_pvmaps/NGC_6334_I_N_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA310.edge.dat
 marker = o
 color = #46eff2
 linestyle = none
 plot_keys = OFFSET, VRAD
 
-[IRAS_180891732_alma1_keplerian_fit]
+[NGC_6334_I_N_alma1_keplerian_fit]
 loc = 0 0
 function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
+xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 27.57751948015581 solMass
-model_amplitude = -15.641223112117661
-model_x_0 = 0.042735042735042736
+model_mass = 13.337614785650759 solMass
+model_amplitude = -10.877577745457856
+model_x_0 = 0.07407407407407407
 model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 1.1442286837862192 solMass
-model_vsys = 33.506361623774524
-model_offset0 = -0.010368721978890032
-model_sd_amplitude = 0.3244877797523337
+model_sd_mass = 1.1603983092300938 solMass
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_sd_amplitude = 0.47318516193494686
 model_sd_x_0 = 0.0
 model_sd_alpha = 0.0
 model_sd_vsys = 0.0
 model_sd_offset0 = 0.0
 model_info = 1
 
-[IRAS_180891732_alma1_unrestricted_fit]
+[NGC_6334_I_N_alma1_unrestricted_fit]
 loc = 0 0
 function = piecewise_powerlaw
-xrange = -0.9950000000000795 0.9950000000000795 arcsec
+xrange = -0.9945 0.9945 arcsec
 yunit = km/s
 sampling = 500
 linestyle = -
 color = #adacac
-model_amplitude = -15.289971516231018
-model_x_0 = 0.042735042735042736
-model_alpha = 0.4842850674151176
+model_amplitude = -12.840238346315473
+model_x_0 = 0.07407407407407407
+model_alpha = 0.6248669691717006
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 33.506361623774524
-model_offset0 = -0.010368721978890032
-model_sd_amplitude = 0.8245116559757866
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_sd_amplitude = 3.0377131725154056
 model_sd_x_0 = 0.0
-model_sd_alpha = 0.03470821050829428
-model_sd_vsys = 0.21414580583624787
-model_sd_offset0 = 0.00813284289450689
+model_sd_alpha = 0.16559322662840853
+model_sd_vsys = 0.5354536693652747
+model_sd_offset0 = 0.042932826214817706
 model_info = 1
 
-[I18089_alma1_pvmap_out]
+[NGC6334IN_alma1_pvmap_out]
 loc = 0 1
-source = IRAS_180891732
-alma = 1
-paval = 335
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra272.96439_dec-17.52467.PA${paval}.fits
-hlines = 32.88 km/s
-rms = 1.6 mJy/beam
-vmax = 52 mJy/beam
-
-[I18089_alma3_pvmap_rot]
-loc = 1 0
-source = IRAS_180891732
-alma = 3
-paval = 315
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
-hlines = 33.02 km/s
-rms = 1.6 mJy/beam
-vmax = 35 mJy/beam
-
-[IRAS_180891732_alma3_pvedge]
-loc = 1 0
-structured_array = ../results/IRAS_180891732/c5c8/per_hot_core/alma3_pvmaps/IRAS_180891732_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA315.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[IRAS_180891732_alma3_keplerian_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.455751756722471 solMass
-model_amplitude = -8.132776374474883
-model_x_0 = 0.042735042735042736
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 0.6481333999560686 solMass
-model_vsys = 33.2131891121867
-model_offset0 = 0.0008601822180362316
-model_sd_amplitude = 0.3534937974509473
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[IRAS_180891732_alma3_unrestricted_fit]
-loc = 1 0
-function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -10.675471260352825
-model_x_0 = 0.042735042735042736
-model_alpha = 0.7991581577000633
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 33.2131891121867
-model_offset0 = 0.0008601822180362316
-model_sd_amplitude = 1.0273836083970318
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.09141316210766491
-model_sd_vsys = 0.2687906933277182
-model_sd_offset0 = 0.006757692612479211
-model_info = 1
-
-[I18089_alma3_pvmap_out]
-loc = 1 1
-source = IRAS_180891732
-alma = 3
-paval = 45
-label = IRAS 18089-1732 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra272.96417_dec-17.52498.PA${paval}.fits
-hlines = 33.02 km/s
-rms = 1.6 mJy/beam
-vmax = 35 mJy/beam
-
-[I18182_alma1_pvmap_rot]
-loc = 2 0
-xticks_fmt = {x:.2f}
-source = IRAS_18182-1433
+source = NGC_6334_I_N
 alma = 1
 paval = 40
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
-xlim = -0.2 0.15 arcsec
-hlines = 62.78 km/s
-rms = 1.4 mJy/beam
-vmax = 11 mJy/beam
-markers = 0.017 arcsec 66.3 km/s, -0.077 arcsec 61.0 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
+hlines = -1.77 km/s
+rms = 1.7 mJy/beam
+vmax = 22 mJy/beam
 
-[I18182_alma1_pvmap_out]
-loc = 2 1
-source = IRAS_18182-1433
-alma = 1
+[NGC_6334_I_N_alma1_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 13.337614785650759 solMass
+model_amplitude = -10.877577745457856
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_info = 1
+
+[NGC_6334_I_N_alma1_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 13.337614785650759 solMass
+model_amplitude = 10.877577745457856
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_info = 1
+
+[NGC6334IN_alma4_pvmap_rot]
+loc = 1 0
+source = NGC_6334_I_N
+alma = 4
 paval = 130
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3CN_K3.ra275.28771_dec-14.52994.PA${paval}.fits
-xlim = -0.18 0.18 arcsec
-hlines = 62.78 km/s
-rms = 1.4 mJy/beam
-vmax = 11 mJy/beam
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+hlines = -6.7 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+spine_color = red
 
-[I18182_alma2_pvmap_rot]
+[NGC_6334_I_N_alma4_pvedge]
+loc = 1 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma4_pvmaps/NGC_6334_I_N_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA130.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma4_keplerian_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_sd_mass = 0.406582460919903 solMass
+model_amplitude = -6.665758063838215
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_sd_amplitude = 0.2705548476401526
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC_6334_I_N_alma4_unrestricted_fit]
+loc = 1 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -7.542074600407852
+model_x_0 = 0.07407407407407407
+model_alpha = 0.689992836962557
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_sd_amplitude = 0.509191397488919
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.08138008183005685
+model_sd_vsys = 0.24941754130606864
+model_sd_offset0 = 0.009763104615705958
+model_info = 1
+
+[NGC6334IN_alma4_pvmap_out]
+loc = 1 1
+source = NGC_6334_I_N
+alma = 4
+paval = 220
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma4_rotation.CH3CN_K3.ra260.22863_dec-35.75179.PA${paval}.fits
+hlines = -6.7 km/s
+rms = 1.7 mJy/beam
+vmax = 20 mJy/beam
+
+[NGC_6334_I_N_alma4_infall]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_amplitude = -6.665758063838215
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC_6334_I_N_alma4_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_amplitude = 6.665758063838215
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334IN_alma6_pvmap_rot]
+loc = 2 0
+source = NGC_6334_I_N
+alma = 6
+paval = 130
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
+hlines = -7.2 km/s
+rms = 1.7 mJy/beam
+vmax = 38 mJy/beam
+spine_color = red
+
+[NGC_6334_I_N_alma6_pvedge]
+loc = 2 0
+structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma6_pvmaps/NGC_6334_I_N_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA130.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[NGC_6334_I_N_alma6_keplerian_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.996699492902263 solMass
+model_amplitude = -9.417192098531983
+model_x_0 = 0.07407407407407407
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.4819804276510245 solMass
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_sd_amplitude = 0.22702004187206742
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[NGC_6334_I_N_alma6_unrestricted_fit]
+loc = 2 0
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -9.089962731920929
+model_x_0 = 0.07407407407407407
+model_alpha = 0.4422619666619437
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_sd_amplitude = 0.3875457154252825
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.049526073226520986
+model_sd_vsys = 0.23818582528693916
+model_sd_offset0 = 0.009085026897949643
+model_info = 1
+
+[NGC6334IN_alma6_pvmap_out]
+loc = 2 1
+source = NGC_6334_I_N
+alma = 6
+paval = 220
+label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
+pvmap = ${results}/${source}_alma6_rotation.CH3CN_K3.ra260.22758_dec-35.75241.PA${paval}.fits
+hlines = -7.2 km/s
+rms = 1.7 mJy/beam
+vmax = 38 mJy/beam
+
+[NGC_6334_I_N_alma6_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.996699492902263 solMass
+model_amplitude = -9.417192098531983
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_info = 1
+
+[NGC_6334_I_N_alma6_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.996699492902263 solMass
+model_amplitude = 9.417192098531983
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_info = 1
+
+[W33A_alma1a_pvmap_rot]
 loc = 3 0
-xticks_fmt = {x:.2f}
-source = IRAS_18182-1433
-alma = 2
-paval = 0
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
-xlim = -0.15 0.2 arcsec
-hlines = 60.64 km/s
-rms = 1.4 mJy/beam
-vmax = 15 mJy/beam
-markers = 0.077 arcsec 63.7 km/s, -0.035 arcsec 57.1 km/s
-markers_physframe = data
-markers_marker = v, ^
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
+source = W33A
+alma = 1a
+paval = -30
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
+hlines = 37.9 km/s
+rms = 1.3 mJy/beam
+vmax = 40 mJy/beam
+spine_color = red
 
-[I18182_alma2_pvmap_out]
+[W33A_alma1a_pvedge]
+loc = 3 0
+structured_array = ../results/W33A/c5c8/per_hot_core/alma1a_pvmaps/W33A_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA-30.edge.dat
+marker = o
+color = #46eff2
+linestyle = none
+plot_keys = OFFSET, VRAD
+
+[W33A_alma1a_keplerian_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.755709293503035 solMass
+model_amplitude = -12.550531669822306
+model_x_0 = 0.039525691699604744
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.4466281877043492 solMass
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
+model_sd_amplitude = 0.5112708420745686
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.0
+model_sd_vsys = 0.0
+model_sd_offset0 = 0.0
+model_info = 1
+
+[W33A_alma1a_unrestricted_fit]
+loc = 3 0
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = -
+color = #adacac
+model_amplitude = -12.987044013188374
+model_x_0 = 0.039525691699604744
+model_alpha = 0.5281034315022166
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
+model_sd_amplitude = 1.0756250852140001
+model_sd_x_0 = 0.0
+model_sd_alpha = 0.06118088081552969
+model_sd_vsys = 0.343779033979197
+model_sd_offset0 = 0.00889964380084104
+model_info = 1
+
+[W33A_alma1a_pvmap_out]
 loc = 3 1
-source = IRAS_18182-1433
-alma = 2
-paval = 90
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra275.28741_dec-14.52989.PA${paval}.fits
-xlim = -0.18 0.22 arcsec
-hlines = 60.64 km/s
-rms = 1.4 mJy/beam
-vmax = 15 mJy/beam
+source = W33A
+alma = 1a
+paval = 60
+pvmap = ${results}/${source}_alma1a_rotation.CH3CN_K3.ra273.66463_dec-17.86670.PA${paval}.fits
+hlines = 37.9 km/s
+rms = 1.3 mJy/beam
+vmax = 40 mJy/beam
 
-[IRAS_180891732_alma1_infall]
-loc = 0 1
+[W33A_alma1a_infall]
+loc = 3 1
 function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 27.57751948015581 solMass
-model_amplitude = -15.641223112117661
-model_x_0 = 0.08547008547008547
+model_mass = 17.755709293503035 solMass
+model_amplitude = -12.550531669822306
+model_x_0 = 0.07905138339920949
 model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 33.506361623774524
-model_offset0 = -0.010368721978890032
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
 model_info = 1
 
-[IRAS_180891732_alma3_infall]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.455751756722471 solMass
-model_amplitude = -8.132776374474883
-model_x_0 = 0.08547008547008547
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 33.2131891121867
-model_offset0 = 0.0008601822180362316
-model_info = 1
-
-[IRAS_180891732_alma1_infall_mirror]
-loc = 0 1
+[W33A_alma1a_infall_mirror]
+loc = 3 1
 function = piecewise_powerlaw
 xrange = -0.9950000000000795 0.9950000000000795 arcsec
 sampling = 500
 linestyle = --
 color = #eb5252
-model_mass = 27.57751948015581 solMass
-model_amplitude = 15.641223112117661
-model_x_0 = 0.08547008547008547
+model_mass = 17.755709293503035 solMass
+model_amplitude = 12.550531669822306
+model_x_0 = 0.07905138339920949
 model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 33.506361623774524
-model_offset0 = -0.010368721978890032
-model_info = 1
-
-[IRAS_180891732_alma3_infall_mirror]
-loc = 1 1
-function = piecewise_powerlaw
-xrange = -0.4950000000000396 0.4950000000000396 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 7.455751756722471 solMass
-model_amplitude = 8.132776374474883
-model_x_0 = 0.08547008547008547
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 33.2131891121867
-model_offset0 = 0.0008601822180362316
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
 model_info = 1
 
