--- a/configs/plots/papers/group_pv_maps.9.cfg
+++ b/configs/plots/papers/group_pv_maps.9.cfg
@@ -41,276 +41,112 @@ basedir = ..
 results = ${basedir}/results/${source}/c5c8/per_hot_core/alma${alma}_pvmaps
 deg = $$^\circ$$
 
-[I18182_alma3_pvmap_rot]
+[G10_alma1b_pvmap_rot]
 loc = 0 0
-source = IRAS_18182-1433
-alma = 3
-paval = 10
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
-hlines = 61.12 km/s
-rms = 1.4 mJy/beam
-vmax = 40 mJy/beam
+source = G10.62-0.38
+alma = 1b
+paval = -30
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
+xlim = -0.5 0.5 arcsec
+hlines = 0.851 km/s
+rms = 1.6 mJy/beam
+vmax = 16 mJy/beam
 
-[IRAS_18182-1433_alma3_pvedge]
-loc = 0 0
-structured_array = ../results/IRAS_18182-1433/c5c8/per_hot_core/alma3_pvmaps/IRAS_18182-1433_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA10.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[IRAS_18182-1433_alma3_keplerian_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 17.27677520629488 solMass
-model_amplitude = -12.380108539151216
-model_x_0 = 0.027932960893854747
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 1.2395565287567358 solMass
-model_vsys = 60.16600044882333
-model_offset0 = -0.05398330020586529
-model_sd_amplitude = 0.4441177298188892
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[IRAS_18182-1433_alma3_unrestricted_fit]
-loc = 0 0
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -17.164808842139003
-model_x_0 = 0.027932960893854747
-model_alpha = 0.7093529553250641
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 60.16600044882333
-model_offset0 = -0.05398330020586529
-model_sd_amplitude = 1.7328587405640883
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.05803700154932522
-model_sd_vsys = 0.19196252926004218
-model_sd_offset0 = 0.006450104777827863
-model_info = 1
-
-[I18182_alma3_pvmap_out]
+[G10_alma1b_pvmap_out]
 loc = 0 1
-source = IRAS_18182-1433
-alma = 3
-paval = 100
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma3_rotation.CH3CN_K3.ra275.28802_dec-14.53017.PA${paval}.fits
-hlines = 61.12 km/s
-rms = 1.4 mJy/beam
-vmax = 40 mJy/beam
+source = G10.62-0.38
+alma = 1b
+paval = 60
+pvmap = ${results}/${source}_alma1b_rotation.CH3CN_K3.ra272.61955_dec-19.93051.PA${paval}.fits
+xlim = -0.5 0.5 arcsec
+hlines = 0.851 km/s
+rms = 1.6 mJy/beam
+vmax = 16 mJy/beam
 
-[I18182_alma5_pvmap_rot]
+[G11.92_alma1b_pvmap_rot]
 loc = 1 0
-source = IRAS_18182-1433
-alma = 5
-paval = 40
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
-xlim = -0.1 0.12 arcsec
-hlines = 61.12 km/s
-rms = 1.4 mJy/beam
+source = G11.92-0.61
+alma = 1b
+paval = -15
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+ylim = 27 45 km/s
+hlines = 37 km/s
+rms = 1.1 mJy/beam
+vmax = 20 mJy/beam
+markers = -0.069 arcsec 33.0 km/s
+markers_physframe = data
+markers_marker = ^
+markers_mec = #46eff2
+markers_mfc = #46eff2
+markers_ms = 10
+
+[G11.92_alma1b_pvmap_out]
+loc = 1 1
+source = G11.92-0.61
+alma = 1b
+paval = 75
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3CN_K3.ra273.49220_dec-18.90576.PA${paval}.fits
+xlim = -0.3 0.3 arcsec
+ylim = 27 45 km/s
+hlines = 37 km/s
+rms = 1.1 mJy/beam
+vmax = 20 mJy/beam
+
+[G14.22-0.50_S_alma1_pvmap_rot]
+loc = 2 0
+source = G14.22-0.50_S
+alma = 1
+paval = 170
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
+xlim = -0.1 0.1 arcsec
+ylim = 10 30 km/s
+hlines = 19.61 km/s
+rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
-markers = 0.036 arcsec 65.0 km/s, 0.0 arcsec 59.1 km/s
+markers = -0.048 arcsec 15.7 km/s, 0.045 arcsec 23.9 km/s
+markers_physframe = data
+markers_marker = ^, v
+markers_mec = #46eff2
+markers_ms = 10
+
+[G14.22-0.50_S_alma1_pvmap_out]
+loc = 2 1
+source = G14.22-0.50_S
+alma = 1
+paval = 260
+pvmap = ${results}/${source}_alma${alma}_rotation.CH3OH_spw0.ra274.55359_dec-16.95566.PA${paval}.fits
+xlim = -0.1 0.1 arcsec
+ylim = 10 30 km/s
+hlines = 19.61 km/s
+rms = 1.3 mJy/beam
+vmax = 15 mJy/beam
+
+[G333.12_alma2_pvmap_rot]
+loc = 3 0
+source = G333.12-0.56
+alma = 2
+paval = 90
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
+xlim = -0.38 0.18 arcsec
+hlines = -54.1 km/s
+rms = 1.7 mJy/beam
+vmax = 35 mJy/beam
+markers = 0.018 arcsec -50.0 km/s, -0.17 arcsec -59.4 km/s
 markers_physframe = data
 markers_marker = v, ^
 markers_mec = #46eff2
 markers_mfc = #46eff2
 markers_ms = 10
 
-[I18182_alma5_pvmap_out]
-loc = 1 1
-source = IRAS_18182-1433
-alma = 5
-paval = 130
-label = IRAS 18182-1433 ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${paval}.fits
-xlim = -0.13 0.13 arcsec
-hlines = 61.12 km/s
-rms = 1.4 mJy/beam
-vmax = 15 mJy/beam
-
-[NGC6334IN_alma1_pvmap_rot]
-loc = 2 0
-source = NGC_6334_I_N
-alma = 1
-paval = 310
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
-hlines = -1.77 km/s
-rms = 1.7 mJy/beam
-vmax = 22 mJy/beam
-
-[NGC_6334_I_N_alma1_pvedge]
-loc = 2 0
-structured_array = ../results/NGC_6334_I_N/c5c8/per_hot_core/alma1_pvmaps/NGC_6334_I_N_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA310.edge.dat
-marker = o
-color = #46eff2
-linestyle = none
-plot_keys = OFFSET, VRAD
-
-[NGC_6334_I_N_alma1_keplerian_fit]
-loc = 2 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 13.337614785650759 solMass
-model_amplitude = -10.877577745457856
-model_x_0 = 0.07407407407407407
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_sd_mass = 1.1603983092300938 solMass
-model_vsys = -3.5721185677940523
-model_offset0 = 0.11505712307143032
-model_sd_amplitude = 0.47318516193494686
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.0
-model_sd_vsys = 0.0
-model_sd_offset0 = 0.0
-model_info = 1
-
-[NGC_6334_I_N_alma1_unrestricted_fit]
-loc = 2 0
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-yunit = km/s
-sampling = 500
-linestyle = -
-color = #adacac
-model_amplitude = -12.840238346315473
-model_x_0 = 0.07407407407407407
-model_alpha = 0.6248669691717006
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -3.5721185677940523
-model_offset0 = 0.11505712307143032
-model_sd_amplitude = 3.0377131725154056
-model_sd_x_0 = 0.0
-model_sd_alpha = 0.16559322662840853
-model_sd_vsys = 0.5354536693652747
-model_sd_offset0 = 0.042932826214817706
-model_info = 1
-
-[NGC6334IN_alma1_pvmap_out]
-loc = 2 1
-source = NGC_6334_I_N
-alma = 1
-paval = 40
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma1_rotation.CH3OH_spw0.ra260.22996_dec-35.75110.PA${paval}.fits
-hlines = -1.77 km/s
-rms = 1.7 mJy/beam
-vmax = 22 mJy/beam
-
-[NGC6334IN_alma2_pvmap_rot]
-loc = 3 0
-source = NGC_6334_I_N
-alma = 2
-paval = -55
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
-xlim = -0.3 0.3 arcsec
-hlines = -3.9 km/s
-rms = 1.5 mJy/beam
-vmax = 16 mJy/beam
-markers = -0.15 arcsec -8.65 km/s, 0.11 arcsec -0.514 km/s
-markers_physframe = data
-markers_marker = ^, v
-markers_mec = #46eff2
-markers_mfc = #46eff2
-markers_ms = 10
-
-[NGC6334IN_alma2_pvmap_out]
+[G333.12_alma2_pvmap_out]
 loc = 3 1
-source = NGC_6334_I_N
+source = G333.12-0.56
 alma = 2
-paval = 35
-label = NGC 6334I(N) ALMA${alma} PA=${paval}${deg}
-pvmap = ${results}/${source}_alma2_rotation.CH3OH_spw0.ra260.22747_dec-35.75482.PA${paval}.fits
+paval = 180
+pvmap = ${results}/${source}_alma2_rotation.CH3CN_K3.ra245.40106_dec-50.67979.PA${paval}.fits
 xlim = -0.3 0.3 arcsec
-ylim = -15 10 km/s
-hlines = -3.9 km/s
-rms = 1.5 mJy/beam
-vmax = 16 mJy/beam
-
-[IRAS_18182-1433_alma3_infall]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 17.27677520629488 solMass
-model_amplitude = -12.380108539151216
-model_x_0 = 0.055865921787709494
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 60.16600044882333
-model_offset0 = -0.05398330020586529
-model_info = 1
-
-[NGC_6334_I_N_alma1_infall]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 13.337614785650759 solMass
-model_amplitude = -10.877577745457856
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -3.5721185677940523
-model_offset0 = 0.11505712307143032
-model_info = 1
-
-[IRAS_18182-1433_alma3_infall_mirror]
-loc = 0 1
-function = piecewise_powerlaw
-xrange = -0.4900000000000392 0.4900000000000392 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 17.27677520629488 solMass
-model_amplitude = 12.380108539151216
-model_x_0 = 0.055865921787709494
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = 60.16600044882333
-model_offset0 = -0.05398330020586529
-model_info = 1
-
-[NGC_6334_I_N_alma1_infall_mirror]
-loc = 2 1
-function = piecewise_powerlaw
-xrange = -0.9945 0.9945 arcsec
-sampling = 500
-linestyle = --
-color = #eb5252
-model_mass = 13.337614785650759 solMass
-model_amplitude = 10.877577745457856
-model_x_0 = 0.14814814814814814
-model_alpha = 0.5
-coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
-model_vsys = -3.5721185677940523
-model_offset0 = 0.11505712307143032
-model_info = 1
+hlines = -54.1 km/s
+rms = 1.7 mJy/beam
+vmax = 35 mJy/beam
 
