--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -3,8 +3,8 @@ ncols = 2
 nrows = 4
 sharex = false
 sharey = false
-#styles = maps inferno aspect_auto thick_border
-styles = maps lipari aspect_auto thick_border
+styles = maps inferno aspect_auto thick_border
+#styles = maps lipari aspect_auto thick_border
 vertical_cbar = false
 horizontal_cbar = true
 left = 0.8
